--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
-        "ext-gd": " * ",
+        "ext-gd": "^7.2",
         "fideloper/proxy": "~3.3",
         "intervention/image": "^2.5",
         "laravel/framework": "5.5.*",
